* Mod for hugo-coder, not a clean commit just WIP * Jump to top button * Custom CSS and page layouts for lists and posts/lists * Dark scrollbar

--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -1,3 +1,31 @@
+
+// @hxgames-begin thendrix dark scrollbars!
+* {
+    scrollbar-color: #2a2c2e #1c1e1f;
+}
+
+::-webkit-scrollbar {
+    background-color: #1C1E1F;
+}
+
+::-webkit-scrollbar-thumb{
+    background-color: #2A2C2E;
+}
+
+::-webkit-scrollbar-corner {
+    background-color: rgb(24, 24, 24);
+}
+
+latest-posts {
+  position: fixed;
+  z-index: 1; /* Stay on top */
+  top: 0; /* Stay at the top */
+  left: 0;
+}
+
+// @hxgames-end end dark scrollbars
+
+
 *,
 *:after,
 *:before {
