--- a/layouts/partials/float.html
+++ b/layouts/partials/float.html
@@ -3,5 +3,9 @@
     <a id="dark-mode-toggle" class="colorscheme-toggle">
         <i class="fa fa-adjust fa-fw" aria-hidden="true"></i>
     </a>
+    <!-- thendrix Add custom theme change for jump to top button -->
+    <a id="scroll-top-click" class="btn-scroll-top">
+        <i class="fa fa-chevron-circle-up" aria-hidden="true"></i>
+    </a>
 </div>
 {{ end }}
